--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
-/* Write your CSS here! */
+  
+
+ h2 {
+    border: 5px solid black;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 0px;
+    margin-left: 10px;
+    background-color: rgb(201, 173, 230);
+  }
+
+
+  li {
+    padding: 0px;
+    border: 1px solid #af4c84;
+  }
+
+  body {
+    width: 100%;
+    max-width: 1024px;
+    margin: 8;
+    
+}
+
+.mainHeading {
+    background-color: rgb(255, 0, 0);
+  }
+
+  #funParagraph {
+    background-color: rgb(0, 255, 110);
+  }
