--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@
   }
 
 
+  p {
+    background-color: yellow;
+  }
+
+
+
   li {
     padding: 0px;
     border: 1px solid #af4c84;
@@ -23,9 +29,9 @@
 }
 
 .mainHeading {
-    background-color: rgb(255, 0, 0);
+    background-color: red;
   }
 
   #funParagraph {
-    background-color: rgb(0, 255, 110);
+    background-color: green;
   }
